--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
+    "heroku-postbuild": "npm run build",
     "dev": "env-cmd -f ./config/dev.env nodemon src/app.js"
   },
   "author": "",
